--- a/index.html
+++ b/index.html
@@ -52,13 +52,79 @@
             </ul>
 
             <div class="text-end d-flex nav-end">
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                </form>
                 <li><a href="#"><i class="fa-solid fa-circle-user"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-heart"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                
             </div>
           </div>
 
         </div>
       </nav>
+
+      <!-- Footer -->
+      <footer>
+          <div class="container">
+              <div class="row">
+
+                  <div class="col-md-3">
+                      <li><a href=""><h3>Dress Mart</h3></a></li>
+                      <li><span><i class="fa-solid fa-location-dot"></i></span>84 Main Rd E, St Albans
+                        VIC 3021, Australia
+                    </li>
+                      <li><span><i class="fa-solid fa-envelope"></i></span>abc@gmail.com
+                    </li>
+                      <li><span><i class="fa-solid fa-phone"></i></span>+88 01307-588223
+                    </li>
+                    <div class="footer-social-media d-flex">
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-whatsapp-square"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                    </div>
+                  </div>
+
+                  <div class="col-md-2 categories-menu">
+                      <h5>Categories</h5>
+                      <div class="footer-social-media d-block">
+                        <li><a href="#">Dress</a></li>
+                        <li><a href="#">Men</a></li>
+                        <li><a href="#">Women</a></li>
+                        <li><a href="#">Denim</i></a></li>
+                        <li><a href="#">Accessories</a></li>
+                        <li><a href="#">Shoes</a></li>
+                    </div>
+                  </div>
+
+                  <div class="col-md-3 categories-menu">
+                    <h5>Information</h5>
+                    <div class="footer-social-media d-block">
+                      <li><a href="#">About Us</a></li>
+                      <li><a href="#">Contact Us</a></li>
+                      <li><a href="#">Terms & Conditions</a></li>
+                      <li><a href="#">returns & Exchanges</i></a></li>
+                      <li><a href="#">Shipping & Delivery</a></li>
+                      <li><a href="#">Privacy Policy</a></li>
+                      <li><a href="#">Open Store</a></li>
+                  </div>
+                </div>
+
+                <div class="col-md-4 categories-menu">
+                    <h5>Newsletter Signup</h5>
+                    <p>Subscribe to our newsletter and get 10% off your first purchase</p>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Enter your email" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">SUBSCRIBE</button>
+                      </form>
+                </div>
+
+              </div>
+          </div>
+      </footer>
 
       
     <!-- Bootstrap js bundle -->
