--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
       </nav>
 
       <!-- Footer -->
-      <footer>
+      <footer id="footer" class="footer py-5">
           <div class="container">
               <div class="row">
 
                   <div class="col-md-3">
-                      <li><a href=""><h3>Dress Mart</h3></a></li>
+                      <h3><a href="">Dress Mart</a></h3>
                       <li><span><i class="fa-solid fa-location-dot"></i></span>84 Main Rd E, St Albans
                         VIC 3021, Australia
                     </li>
