--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
           </div>
       </footer>
 
+      <!-- footer bottom -->
+      <section id="footer-bottom" class="footer-bottom">
+          <div class="cotainer">
+              <p class="text-center copyright py-3">Copyright © {js date} Dev Tabibur all rights reserved. Powered by The4</p>
+              
+          </div>
+      </section>
+
       
     <!-- Bootstrap js bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
