latest news done

--- a/index.html
+++ b/index.html
@@ -63,7 +63,49 @@
           </div>
 
         </div>
-      </nav>
+    </nav>
+
+    <!-- latest news -->
+    <section id="latest-news" class="latest-news py-5">
+        <div class="container">
+
+          <div class="latest-news-title-box text-center py-4">
+            <h2 class="text-capitalize">Latest News</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, recusandae.</p>
+          </div>
+
+            <div class="row pb-4">
+
+                <div class="col-md-4">
+                    <div class="latest-inner">
+                      <img style="width: 350px;" src="./Images/news-1.webp" alt="">
+                    </div>
+                    <h4 class="my-2">Spring – Summer Trending 2020</h4>
+                    <p class="my-2 admin">By {admin} {April 6, 2020}</h6>
+                    <p class="my-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia libero nobis labore voluptates facilis cumque quaerat quidem repellendus fugit id.</p>
+                </div>
+
+                <div class="col-md-4">
+                  <div class="latest-inner">
+                    <img style="width: 350px;" src="./Images/news-2.webp" alt="">
+                  </div>
+                  <h4 class="my-2">Spring – Summer Trending 2020</h4>
+                  <p class="my-2 admin">By {admin} {April 6, 2020}</p>
+                  <p class="my-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia libero nobis labore voluptates facilis cumque quaerat quidem repellendus fugit id.</p>
+              </div>
+
+              <div class="col-md-4">
+                <div class="latest-inner">
+                  <img style="width: 350px;" src="./Images/news-3.webp" alt="">
+                </div>
+                <h4 class="my-2">10 minute Fat burning workout for beginners</h4>
+                <p class="my-2 admin">By {admin} {April 6, 2020}</p>
+                <p class="my-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia libero nobis labore voluptates facilis cumque quaerat quidem repellendus fugit id.</p>
+            </div>
+
+            </div>
+        </div>
+    </section>
 
       <!-- Footer -->
       <footer id="footer" class="footer py-5">
