hero section done

--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@
         </div>
     </nav>
 
+    <!-- hero -->
+    <section class="hero-section py-5" id="hero-section">
+      <div class="container">
+        <div class="inner-hero p-4 text-center text-white">
+          <h2 class="mt-4">FREE SHIPPING</h2>
+          <h4 class="mt-4">ON ORDERS OVER $50 - USE COUPON CODE OVER50</h4>
+
+          <div class="inner-hero-buttons">
+            <a href="">Shop Women</a>
+            <a href="">Shop Men</a>
+            <a href="">Shop Sale</a>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+
     <!-- latest news -->
     <section id="latest-news" class="latest-news py-5">
         <div class="container">
