--- a/index.html
+++ b/index.html
@@ -83,6 +83,50 @@
     </section>
 
 
+    <!-- our product -->
+    <section class="product-section py-5 py-lg-4" id="product-section">
+      <div class="container">
+        <div class="row">
+
+          <ul class="filter-list" id="filter-list">
+            <li class="list active" data-filter="All">All</li>
+            <li class="list" data-filter="Men">Men</li>
+            <li class="list" data-filter="Women">Women</li>
+            <li class="list" data-filter="T-Shirt">T-Shirt</li>
+            <li class="list" data-filter="Popular">Popular</li>
+          </ul>
+
+          <div class="product">
+
+            <div class="item-box T-Shirt">
+              <img src="./Images/t-shirt-1.webp" alt="t-shirt-1">
+            </div>
+            <div class="item-box T-Shirt">
+              <img src="./Images/t-shirt-2.webp" alt="t-shirt-2">
+            </div>
+            <div class="item-box T-Shirt">
+              <img src="./Images/t-shirt-3.webp" alt="t-shirt-3">
+            </div>
+            <div class="item-box T-Shirt">
+              <img src="./Images/t-shirt-4.webp" alt="t-shirt-4">
+            </div>
+            <div class="item-box T-Shirt">
+              <img src=".\Images\t-shirt-5.jpg" alt="t-shirt-5">
+            </div>
+
+          </div>
+
+
+        </div>
+        <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
+          <div class="col-md-3"></div>
+        </div>
+      </div>
+    </section>
+
     <!-- latest news -->
     <section id="latest-news" class="latest-news py-5">
         <div class="container">
@@ -194,7 +238,31 @@
           </div>
       </section>
 
-      
+      <!-- jQuery for gallery filter -->
+      <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+      <!-- for jQuery gallery filter -->
+      <script type="text/javascript">
+        $(document).ready(function(){
+          $('.list').click(function(){
+            const value = $(this).attr('data-filter');
+            if(value == 'All'){
+              $('.item-box').show('1000');
+            }
+            else{
+              $('.item-box').not('.' +value).hide('1000');
+              $('.item-box').filter('.' +value).show('1000');
+            }
+          })
+          // add active class on selected item
+          $('.list').click(function(){
+            $(this).addClass('active').siblings().removeClass('active');
+          })
+
+        })
+      </script>
+
+
     <!-- Bootstrap js bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
