--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
 
     <!-- our product -->
     <section class="product-section py-5 py-lg-4" id="product-section">
+
+      <div class="inner-section text-center mx-auto">
+        <h2>OUR PRODUCTS</h2>
+        <p>Top sale in this week</p>
+      </div>
+
       <div class="container">
         <div class="row">
           <div class="col">
@@ -155,24 +161,143 @@
               <li class="list" data-filter="Popular">Popular</li>
             </ul>
   
-            <div class="product">
-  
-              <div class="item-box T-Shirt">
-                <img src="./Images/t-shirt-1.webp" alt="t-shirt-1">
+            <div class="product my-5">
+
+              <div class="item-box All Men" style="width: 18rem;">
+                <img src="/Images/boys-dress-1.jpeg" alt="boys-dress-1">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
               </div>
-              <div class="item-box T-Shirt">
-                <img src="./Images/t-shirt-2.webp" alt="t-shirt-2">
+              <div class="item-box All Men Popular" style="width: 18rem;">
+                <img src="/Images/boys-dress-2.jpeg" alt="boys-dress-2">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
               </div>
-              <div class="item-box T-Shirt">
-                <img src="./Images/t-shirt-3.webp" alt="t-shirt-3">
+              <div class="item-box All Men Popular" style="width: 18rem;">
+                <img src="/Images/boys-kids.jpg" alt="boys-kids">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
               </div>
-              <div class="item-box T-Shirt">
-                <img src="./Images/t-shirt-4.webp" alt="t-shirt-4">
+              <div class="item-box All Men" style="width: 18rem;">
+                <img src="/Images/boys-kids-1.jpg" alt="boys-kids-1">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
               </div>
-              <div class="item-box T-Shirt">
-                <img src=".\Images\t-shirt-5.jpg" alt="t-shirt-5">
+              <div class="item-box All Men" style="width: 18rem;">
+                <img src="/Images/t-shirt-15.webp" alt="t-shirt-15">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
               </div>
-  
+              <div class="item-box All Men T-Shirt Popular" style="width: 18rem;">
+                <img src="/Images/t-shirt-1.webp" alt="t-shirt-1">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
+              </div>
+              <div class="item-box All Men T-Shirt" style="width: 18rem;">
+                <img src="/Images/t-shirt-2.webp" alt="t-shirt-2">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
+              </div>
+              <div class="item-box All Men Popular" style="width: 18rem;">
+                <img src="/Images/t-shirt-10.webp" alt="t-shirt-10">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
+              </div>
+              <div class="item-box All Women" style="width: 18rem;">
+                <img src="/Images/two-hundred-ladies-1.jpg" alt="two-hundred-ladies-1">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
+              </div>
+              <div class="item-box All Women" style="width: 18rem;">
+                <img src="/Images/two-hundred-girls-1.jpg" alt="two-hundred-girls-1">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
+              </div>
+              <div class="item-box All Women Popular" style="width: 18rem;">
+                <img src="/Images/two-hundred-girls-2.jpg" alt="two-hundred-girls-2">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
+              </div>
+              <div class="item-box All Women Popular" style="width: 18rem;">
+                <img src="/Images/two-hundred-ladies.jpg" alt="two-hundred-ladies">
+
+                <div class="card-body text-center">
+                  <a href="#" class="btn heart-icon d-block"><i class="fa-solid fa-heart"></i></a>
+                  <div class="inner-btn">
+                    <a href="#" class=" d-block mb-3">Overview</a>
+                    <a href="#" class=" d-block">Add to Cart</a>
+                  </div>
+                </div>
+              </div>
+
+              
+
             </div>
 
           </div>
@@ -316,11 +441,6 @@
 
       <!-- swiper js -->
       <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-
-      
-
-
-
     <!-- Bootstrap js bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
